# earth_kata

./: .gitignore  README.md  get_distance.py  main.py  pyproject.toml  readme.md  test_get_distance.py
package/: data.py  get_distance.py  import_data.py  models.py
resources/: points_list.json  test_seven_summits.json
tests/: test_get_distance.py  test_import_data.py
